versioned_docs/version-1.16.x/核心组件-重点/错误处理/错误处理-堆栈特性.md
---
title: '错误处理-堆栈特性'
sidebar_position: 0
hide_title: true
---

## 错误堆栈

标准库的 `error` 错误实现比较简单，无法进行堆栈追溯，对于产生错误时的上层调用者来讲不是很友好，无法获得错误的调用链详细信息。 `gerror` 支持错误堆栈记录，通过 `New/Newf`、 `Wrap/Wrapf` 等方法均会自动记录当前错误产生时的堆栈信息。

使用示例：

```go
package main

import (
    "fmt"

    "github.com/gogf/gf/errors/gerror"
)

func OpenFile() error {
    return gerror.New("permission denied")
}

func OpenConfig() error {
    return gerror.Wrap(OpenFile(), "configuration file opening failed")
}

func ReadConfig() error {
    return gerror.Wrap(OpenConfig(), "reading configuration failed")
}

func main() {
    fmt.Printf("%+v", ReadConfig())
}

```

执行后，终端输出：

```html
reading configuration failed: configuration file opening failed: permission denied
1. reading configuration failed
    1). main.ReadConfig
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/geg/errors/gerror/gerror2.go:18
    2). main.main
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/geg/errors/gerror/gerror2.go:25
2. configuration file opening failed
    1). main.OpenConfig
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/geg/errors/gerror/gerror2.go:14
    2). main.ReadConfig
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/geg/errors/gerror/gerror2.go:18
    3). main.main
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/geg/errors/gerror/gerror2.go:25
3. permission denied
    1). main.OpenFile
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/geg/errors/gerror/gerror2.go:10
    2). main.OpenConfig
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/geg/errors/gerror/gerror2.go:14
    3). main.ReadConfig
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/geg/errors/gerror/gerror2.go:18
    4). main.main
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/geg/errors/gerror/gerror2.go:25

```

可以看到，调用端可以通过 `Wrap` 方法将底层的错误信息进行层级叠加，并且包含完整的错误堆栈信息。

## `Stack` 获取堆栈信息

```go
func Stack(err error) string

```

通过 `Stack` 方法我们可以获得 `error` 对象的完整堆栈信息，返回堆栈列表字符串。 注意参数为标准库 `error` 类型，当该参数为 `gerror` 模块生成的 `error` 时， 或者开发者自定义的 `error` 对象实现了该接口时支持打印，否则，返回空字符串。

使用示例：

```go
package main

import (
    "errors"
    "fmt"

    "github.com/gogf/gf/errors/gerror"
)

func main() {
    var err error
    err = errors.New("sql error")
    err = gerror.Wrap(err, "adding failed")
    err = gerror.Wrap(err, "api calling failed")
    fmt.Println(gerror.Stack(err))
}

```

执行后，终端输出：

```html
1. api calling failed
   1).  main.main
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/.example/other/test.go:14
2. adding failed
   1).  main.main
        /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/.example/other/test.go:13
3. sql error

```

## `Current` 获取当前 `error`

```go
func Current(err error) error

```

`Current` 方法用于获取当前层级的错误信息，通过 `error` 接口对象返回。

使用示例：

```go
package main

import (
    "errors"
    "fmt"

    "github.com/gogf/gf/errors/gerror"
)

func main() {
    var err error
    err = errors.New("sql error")
    err = gerror.Wrap(err, "adding failed")
    err = gerror.Wrap(err, "api calling failed")
    fmt.Println(err)
    fmt.Println(gerror.Current(err))
}

```

执行后，终端输出：

```html
api calling failed: adding failed: sql error
api calling failed

```

## `Next` 获取下一层 `error`

```go
func Next(err error) error

```

`Next` 方法用于获取层级错误的下一级错误 `error` 接口对象。当下一层级不存在时，返回 `nil`。

使用示例：

```go
package main

import (
    "errors"
    "fmt"

    "github.com/gogf/gf/errors/gerror"
)

func main() {
    var err error
    err = errors.New("sql error")
    err = gerror.Wrap(err, "adding failed")
    err = gerror.Wrap(err, "api calling failed")

    fmt.Println(err)

    err = gerror.Next(err)
    fmt.Println(err)

    err = gerror.Next(err)
    fmt.Println(err)
}

```

执行后，终端输出：

```html
api calling failed: adding failed: sql error
adding failed: sql error
sql error

```

## `Cause` 获取根 `error`

```go
func Cause(err error) error

```

通过 `Cause` 方法我们可以获得 `error` 对象的根错误信息（原始错误）。 注意参数为标准库 `error` 类型，当该参数为 `gerror` 模块生成的 `error` 时， 或者开发者自定义的 `error` 对象实现了该接口方法时支持打印，否则，返回输出的 `error` 对象。

使用示例：

```go
package main

import (
    "fmt"

    "github.com/gogf/gf/errors/gerror"
)

func OpenFile() error {
    return gerror.New("permission denied")
}

func OpenConfig() error {
    return gerror.Wrap(OpenFile(), "configuration file opening failed")
}

func ReadConfig() error {
    return gerror.Wrap(OpenConfig(), "reading configuration failed")
}

func main() {
    fmt.Println(gerror.Cause(ReadConfig()))
}

```

执行后，终端输出：

```html
permission denied

```