versioned_docs/version-2.4.x/核心组件-重点/错误处理/错误处理-堆栈特性.md
---
title: '错误处理-堆栈特性'
sidebar_position: 1
hide_title: true
---

## 错误堆栈

标准库的 `error` 错误实现比较简单，无法进行堆栈追溯，对于产生错误时的上层调用者来讲不是很友好，无法获得错误的调用链详细信息。 `gerror` 支持错误堆栈记录，通过 `New/Newf`、 `Wrap/Wrapf` 等方法均会自动记录当前错误产生时的堆栈信息。

示例：

```go
package main

import (
    "fmt"
    "github.com/gogf/gf/v2/errors/gerror"
)

func OpenFile() error {
    return gerror.New("permission denied")
}

func OpenConfig() error {
    return gerror.Wrap(OpenFile(), "configuration file opening failed")
}

func ReadConfig() error {
    return gerror.Wrap(OpenConfig(), "reading configuration failed")
}

func main() {
    fmt.Printf("%+v", ReadConfig())
}

// Output:
// reading configuration failed: configuration file opening failed: permission denied
// 1. reading configuration failed
//     1). main.ReadConfig
//         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/v2/geg/errors/gerror/gerror2.go:18
//     2). main.main
//         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/v2/geg/errors/gerror/gerror2.go:25
// 2. configuration file opening failed
//     1). main.OpenConfig
//         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/v2/geg/errors/gerror/gerror2.go:14
//     2). main.ReadConfig
//         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/v2/geg/errors/gerror/gerror2.go:18
//     3). main.main
//         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/v2/geg/errors/gerror/gerror2.go:25
// 3. permission denied
//     1). main.OpenFile
//         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/v2/geg/errors/gerror/gerror2.go:10
//     2). main.OpenConfig
//         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/v2/geg/errors/gerror/gerror2.go:14
//     3). main.ReadConfig
//         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/v2/geg/errors/gerror/gerror2.go:18
//     4). main.main
//         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/v2/geg/errors/gerror/gerror2.go:25
```

可以看到，调用端可以通过 `Wrap` 方法将底层的错误信息进行层级叠加，并且包含完整的错误堆栈信息。

## `HasStack` 判断错误是否带堆栈

- 说明：通过 `HasStack` 方法我们可以判断给定的 `error` 接口对象是否实现（包含）了堆栈信息。
- 格式：









```go
HasStack(err error) bool
```

- 示例：









```go
func ExampleHasStack() {
      err1 := errors.New("sql error")
      err2 := gerror.New("write error")
      fmt.Println(gerror.HasStack(err1))
      fmt.Println(gerror.HasStack(err2))

      // Output:
      // false
      // true
}
```


## `Stack` 获取堆栈信息

- 说明：通过 `Stack` 方法我们可以获得 `error` 对象的完整堆栈信息，返回堆栈列表字符串。 注意参数为标准库 `error` 类型，当该参数为 `gerror` 模块生成的 `error` 时， 或者开发者自定义的 `error` 对象实现了该接口时支持打印，否则，返回空字符串。
- 格式：









```go
Stack(err error) string
```

- 示例：









```go
func ExampleStack() {
       var err error
      err = errors.New("sql error")
      err = gerror.Wrap(err, "adding failed")
      err = gerror.Wrap(err, "api calling failed")
      fmt.Println(gerror.Stack(err))

      // Output:
      // 1. api calling failed
      //     1).  main.main
      //         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/.example/other/test.go:14
      // 2. adding failed
      //     1).  main.main
      //         /Users/john/Workspace/Go/GOPATH/src/github.com/gogf/gf/.example/other/test.go:13
      // 3. sql error
}
```


## `Current` 获取当前 `error`

- 说明： `Current` 方法用于获取当前层级的错误信息，通过 `error` 接口对象返回。
- 格式：









```go
Current(err error) error
```

- 示例：









```go
func ExampleCurrent() {
        var err error
      err = errors.New("sql error")
      err = gerror.Wrap(err, "adding failed")
      err = gerror.Wrap(err, "api calling failed")
      fmt.Println(err)
      fmt.Println(gerror.Current(err))

      // Output:
      // api calling failed: adding failed: sql error
      // api calling failed
}
```


## `Next/Unwrap` 获取下一层 `error`

- 说明： `Next/Unwrap` 方法用于获取层级错误的下一级错误 `error` 接口对象。当下一层级不存在时，返回 `nil`。其中 `Unwrap` 方法是 `Next` 方法的别名，是 `Golang v1.17` 版本开始支持的错误堆栈遍历方法。
- 格式：









```go
Next(err error) error
```

- 示例1：简单的错误层级访问示例。









```go
func ExampleNext() {
      var err error
      err = errors.New("sql error")
      err = gerror.Wrap(err, "adding failed")
      err = gerror.Wrap(err, "api calling failed")

      fmt.Println(err)

      err = gerror.Next(err)
      fmt.Println(err)

      err = gerror.Next(err)
      fmt.Println(err)

      // Output:
      // api calling failed: adding failed: sql error
      // adding failed: sql error
      // sql error
}
```

- 示例2：常见遍历逻辑代码示例。









```go
func IsGrpcErrorNotFound(err error) bool {
      if err != nil {
          for e := err; e != nil; e = gerror.Unwrap(e) {
              if s, ok := status.FromError(e); ok && s != nil && s.Code() == codes.NotFound {
                  return true
              }
          }
      }
      return false
}
```


## `Cause` 获取根错误 `error`

- 说明：通过 `Cause` 方法我们可以获得 `error` 对象的根错误信息（原始错误）。 注意参数为标准库 `error` 类型，当该参数为 `gerror` 模块生成的 `error` 时， 或者开发者自定义的 `error` 对象实现了该接口方法时支持打印，否则，返回输出的 `error` 对象。
- 格式：









```go
Next(err error) error
```

- 示例：









```go
package main

import (
      "fmt"
      "github.com/gogf/gf/v2/errors/gerror"
)

func OpenFile() error {
      return gerror.New("permission denied")
}

func OpenConfig() error {
      return gerror.Wrap(OpenFile(), "configuration file opening failed")
}

func ReadConfig() error {
      return gerror.Wrap(OpenConfig(), "reading configuration failed")
}

func main() {
      fmt.Println(gerror.Cause(ReadConfig()))
}

// Output:
// permission denied
```